<resources>
    <string name="app_name">Homework6_Leacture8</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
    <string name="active_users">Active Users : </string>
    <string name="removed_users">Removed Users :</string>
    <string name="update_user_s_info">Update User\'s Info</string>
</resources>