<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/astronaut"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/edtFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/edtLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/opIdentification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_users"
                android:textAppearance="@style/statisticHint"/>
            <TextView
                android:id="@+id/activeUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/statisticHint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/removed_users"
                android:textAppearance="@style/statisticHint"/>
            <TextView
                android:id="@+id/removedUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/statisticHint"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/adduserbtn"
            android:textColor="@color/black"
            android:text="@string/add_user"
            android:drawableRight="@drawable/alien"
            android:paddingEnd="100dp"
            android:paddingStart="50dp"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRemoveUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/removeuser"
            android:textColor="@color/white"
            android:text="@string/remove_user"
            android:drawableRight="@drawable/removebin"
            android:paddingEnd="100dp"
            android:paddingStart="50dp"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdateUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/updateuserbtn"
            android:textColor="@color/white"
            android:text="@string/update_user"
            android:drawableRight="@drawable/alien1"
            android:paddingEnd="100dp"
            android:paddingStart="50dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>


</LinearLayout>