<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".UpdateActivity"
android:orientation="vertical"
android:background="@color/white">

<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/chewbacca1"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="10dp"/>
<EditText
    android:id="@+id/edtFName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/first_name"
    android:layout_marginBottom="5dp"/>

<EditText
    android:id="@+id/edtLName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/last_name"
    android:layout_marginBottom="5dp"/>

<EditText
    android:id="@+id/edtAge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/age"
    android:layout_marginBottom="5dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdateUsersInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/updateuserbtn"
        android:textColor="@color/white"
        android:text="@string/update_user_s_info"
        android:drawableRight="@drawable/morty"
        android:paddingEnd="100dp"
        android:paddingStart="50dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>


</LinearLayout>